--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
 		<p>I am currently working at Jewel-Osco. My work focus mostly on preventing Insurance frauds and loss preventing strategies</p>
 		<h2>Helpsudan</h2>
 		<p>HelpSudan is non-profit organization founded by the Lost Boys of Sudan in Chicago,IL.This organization provides school materials like books and pencils to children affected by war in South Sudan</p>
-		<p><a href="https://www.helpsudaninternational.org/ for more information"></a></p>
+		<p><a href="https://www.helpsudaninternational.org/">https://www.helpsudaninternational.org/ for more information</a></p>
 	</body>
 </html>
