--- a/project1book.html
+++ b/project1book.html
@@ -21,7 +21,7 @@
 		<h3>This my favorite book</h3>
 		
 		<h4><em>To Kill a Mockingbird</em> by Harper Lee</h4>
-		<img src="imgs/book.png" alt="To Kill a Mockingbird">
+		<img src="imgs/book.PNG" alt="To Kill a Mockingbird">
 		<p>The book is known for warmth and humor.It was about bad time during segregation, but there were few good people like Atticus Finch who personal put his life line to depend black people. Black were racial accuse of Rape and other crimes they did not commit.</p>
 		<p><a href="http://www.any-read.net/view/3778.html">To Kill a Mockingbird</a></p>
 		
