changing html4 to html5

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title><b>Thon Ayuen</b></title>
+		<title><strong>Thon Ayuen</strong></title>
 	</head>
 	
 	<body>
