update some tag to html5

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<h1>Resume</h1>
 		</header>
 		
-		<p><b>Thon Ayuen</b></p>
+		<p><strong>Thon Ayuen</strong></p>
 		<p>2409 W. Berwyn ave</p>
 		<p>Chicago, IL</p>	
 		<p>60625</p>
