updated from <b> to <strong> and updated the video

--- a/project1me.html
+++ b/project1me.html
@@ -34,8 +34,8 @@
 		<img src="imgs/juice.jpg" alt="fruit punch">
 		
 		<h4>President video during my wife citizenship ceremony. He talk like the best president at that time</h4>
-		<video controls autoplay>
-			<source src="imgs/video1.mp4" type="video1/mp4"> 
+		<video width="206" height="406" controls autoplay>
+			<source src="imgs/video 1.mp4" type="video/mp4"></source> 
 		</video>
 	
 		<footer>
