--- a/project1me.html
+++ b/project1me.html
@@ -35,7 +35,7 @@
 		
 		<h4>President video during my wife citizenship ceremony. He talk like the best president at that time</h4>
 		<video controls autoplay>
-			<source src="imgs/video1" type="video/mp4"></source> 
+			<source src="imgs/video.mp4" type="video/mp4"></source> 
 		</video>
 	
 		<footer>
