change some code

--- a/index.html
+++ b/index.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
+<head>
 		<meta charset="utf-8">
-		<title><strong>Thon Ayuen</strong></title>
-	</head>
+		<title>Thon Ayuen</title>
+</head>
 	
-	<body>
-		<nav>
-			<ul>
-				<li><strong><a href="project1me.html">About Me</a></strong></li>
-				<li><strong><a href="project1.html">Resume</a></strong></li>
-				<li><strong><a href="project1book.html">Favorite Books</a></strong></li>
-			</ul>
-		</nav>
+<body>
+  <nav>
+    <ul>
+	  <li><strong><a href="project1me.html">About Me</a></strong></li>
+	  <li><strong><a href="index.html">Resume</a></strong></li>
+	  <li><strong><a href="project1book.html">Favorite Books</a></strong></li>
+	</ul>
+  </nav>
 		
 		<header>
 			<h1>Resume</h1>
 		</header>
 		
+		<section>
 		<p><strong>Thon Ayuen</strong></p>
 		<p>2409 W. Berwyn ave</p>
 		<p>Chicago, IL</p>	
 		<p>60625</p>
 		<p>Phone: (773)5036671</p>
 		<p>Email: Tayuen@yahoo.com</p>
+		</section>
 		
+		<section>
 		<h2>Education</h2>
 		<p>Associate degree in Arts, May 2015</p>
 		<p>Wilbur Wright College.4300 N. Narragansett ave. Chicago, IL</p>
@@ -32,12 +35,15 @@
 		<p>Bachelors of Information, Technology and Management, degree expected nenxt Year 2020</p>
 		<p>Illinois Institute of Technology.10 W. 35th st. Chicago, IL 60616</p>
 		<p>Current GPA: 3.5</p>
+		</section>
 		
+		<section>
 		<h2>Skills</h2>
 		<h3>Programming Languages</h3>
 		<p>Linux and Java</p>
 		<p>Current: JavaScript,HTML, CSS, MySQL and C++</p>
 		<p><strong>Interpersonal Skills:</strong> Good communication, committed and compassion, Confident, Truthwothy and Team Player</p>
+		</section>
 		
 		<h2>Present Work</h2>
 		<h3>Jewel Osco</h3>
@@ -45,5 +51,5 @@
 		<h2>Helpsudan</h2>
 		<p>HelpSudan is non-profit organization founded by the Lost Boys of Sudan in Chicago,IL.This organization provides school materials like books and pencils to children affected by war in South Sudan</p>
 		<p><a href="https://www.helpsudaninternational.org/">https://www.helpsudaninternational.org/ for more information</a></p>
-	</body>
+</body>
 </html>
