--- a/project1me.html
+++ b/project1me.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Thon Ayuen</title>
-	</head>
+<head>
+
+  <meta charset="utf-8">
+  <title>Thon Ayuen</title>
+  
+</head>
 	
-	<body>
-		<nav>
-			<ul>
-				<li><strong><a href="project1me.html">About Me</a></strong></li>
-				<li><strong><a href="project1.html">Resume</a></strong></li>
-				<li><strong><a href="project1book.html">Favorite Books</a></strong></li>
-			</ul>
-		</nav>
+<body>
+  <nav>
+    <ul>
+	  <li><strong><a href="project1me.html">About Me</a></strong></li>
+	  <li><strong><a href="index.html">Resume</a></strong></li>
+	  <li><strong><a href="project1book.html">Favorite Books</a></strong></li>
+	</ul>
+  </nav>
 		
 		<header>
 			<h1>Thon Ayuen</h1>
-		</header>
+	  	</header>
 		
-		<p>Hello class! My name is Thon I'm a transfer student from City colleges of Chicago, and ITM Major from IIT.</p>
-		<p>I am father of three and currently working full-time.</p>
-		<p>I am also working on providing clean drinking water to children in South Sudan</P>
-		<p>I spent time with my kids and reading them some good stories books. I also like novels, the most is <em>To Kill A Mockingbird</em> by Harper Lee. I also like to listen to music and watches sport.</p>
-		<p>During summer, I spent a lot of time outdoor with the kids</p>
+		<section>
+		  <p>Hello class! My name is Thon I'm a transfer student from City colleges of Chicago, and ITM Major from IIT.</p>
+		  <p>I am father of three and currently working full-time.</p>
+		  <p>I am also working on providing clean drinking water to children in South Sudan</P>
+		  <p>I spent time with my kids and reading them some good stories books. I also like novels, the most is <em>To Kill A Mockingbird</em> by Harper Lee. I also like to listen to music and watches sport.</p>
+		  <p>During summer, I spent a lot of time outdoor with the kids</p>
+		</section>
 		
+		<section>
 		<img src="imgs/me.jpg" alt="Thon Ayuen">
 		
 		<h3>These are few of my drinks:</h3>
@@ -32,14 +37,15 @@
 		<h4>kids juice for my kids</h4>
 		
 		<img src="imgs/juice.jpg" alt="fruit punch">
+		</section>
 		
-		<h4>President video during my wife citizenship ceremony. He talk like the best president at that time</h4>
-		<video controls autoplay>
-			<source src="imgs/video.mp4" type="video/mp4"></source> 
-		</video>
-	
+		<section>
+		<h4>President video </h4>
+		<iframe src="https://www.youtube.com/embed/MS5UjNKw_1M"> </iframe>
+		</section>
+		
 		<footer>
 			<h4><strong>ITMD: 361</strong></h4>
 		</footer>
-	</body>
+</body>
 </html>
