sections and heading where added

--- a/project1me.html
+++ b/project1me.html
@@ -17,10 +17,11 @@
   </nav>
 		
 		<header>
-			<h1>Thon Ayuen</h1>
+			<h1>Thon ayuen</h1>
 	  	</header>
 		
 		<section>
+		<h2> About Me</h2>
 		  <p>Hello class! My name is Thon I'm a transfer student from City colleges of Chicago, and ITM Major from IIT.</p>
 		  <p>I am father of three and currently working full-time.</p>
 		  <p>I am also working on providing clean drinking water to children in South Sudan</P>
@@ -29,6 +30,7 @@
 		</section>
 		
 		<section>
+		<h2>imgs</h2>		
 		<img src="imgs/me.jpg" alt="Thon Ayuen">
 		
 		<h3>These are few of my drinks:</h3>
