change jpg to JPG

--- a/project1me.html
+++ b/project1me.html
@@ -28,7 +28,7 @@
 		  <p>During summer, I spent a lot of time outdoor with the kids</p>
 		
 		<h2>imgs</h2>		
-		<img src="imgs/me.jpg" alt="Thon Ayuen">
+		<img src="imgs/me.JPG" alt="Thon Ayuen">
 		
 		<h3>These are few of my drinks:</h3>
 		
